# wine

./: CMakeLists.txt
include/: config.h.in
loader/: CMakeLists.txt
tools/: CMakeLists.txt
