cmake_minimum_required(VERSION 3.16)

include(cmake/VersionFromGit.cmake)
version_from_git(INCLUDE_HASH ON)

project(wine VERSION ${VERSION})

include(CheckIncludeFile)
include(CheckLibraryExists)
include(CheckSymbolExists)

check_symbol_exists(__GLIBC__ "features.h" HAVE_GLIBC)

if (HAVE_GLIBC)
    add_compile_definitions(_GNU_SOURCE)
    set(CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
endif()

check_include_file(dlfcn.h HAVE_DLFCN_H)

check_library_exists(dl dlopen "" HAVE_LIBDL)

if(HAVE_LIBDL)
    set(CMAKE_REQUIRED_LIBRARIES dl)
endif()
check_symbol_exists(dlopen dlfcn.h HAVE_DLOPEN)
check_symbol_exists(dladdr dlfcn.h HAVE_DLADDR)
check_symbol_exists(dlinfo link.h;dlfcn.h HAVE_DLINFO)
unset(CMAKE_REQUIRED_LIBRARIES)

check_library_exists(m acosh "" HAVE_LIBM)

if(HAVE_LIBM)
    set(CMAKE_REQUIRED_LIBRARIES m)
endif()
check_symbol_exists(acosh math.h HAVE_ACOSH)
check_symbol_exists(acoshf math.h HAVE_ACOSHF)
check_symbol_exists(asinh math.h HAVE_ASINH)
check_symbol_exists(asinhf math.h HAVE_ASINHF)
check_symbol_exists(atanh math.h HAVE_ATANH)
check_symbol_exists(atanhf math.h HAVE_ATANHF)
check_symbol_exists(cbrt math.h HAVE_CBRT)
check_symbol_exists(cbrtf math.h HAVE_CBRTF)
check_symbol_exists(erf math.h HAVE_ERF)
check_symbol_exists(erfc math.h HAVE_ERFC)
check_symbol_exists(erfcf math.h HAVE_ERFCF)
check_symbol_exists(erff math.h HAVE_ERFF)
check_symbol_exists(exp2 math.h HAVE_EXP2)
check_symbol_exists(exp2f math.h HAVE_EXP2F)
check_symbol_exists(expm1 math.h HAVE_EXPM1)
check_symbol_exists(expm1f math.h HAVE_EXPM1F)
check_symbol_exists(fma math.h HAVE_FMA)
check_symbol_exists(fmaf math.h HAVE_FMAF)
check_symbol_exists(ilogb math.h HAVE_ILOGB)
check_symbol_exists(ilogbf math.h HAVE_ILOGBF)
check_symbol_exists(j0 math.h HAVE_J0)
check_symbol_exists(j1 math.h HAVE_J1)
check_symbol_exists(jn math.h HAVE_JN)
check_symbol_exists(lgamma math.h HAVE_LGAMMA)
check_symbol_exists(lgammaf math.h HAVE_LGAMMAF)
check_symbol_exists(llrint math.h HAVE_LLRINT)
check_symbol_exists(llrintf math.h HAVE_LLRINTF)
check_symbol_exists(llround math.h HAVE_LLROUND)
check_symbol_exists(llroundf math.h HAVE_LLROUNDF)
check_symbol_exists(log1p math.h HAVE_LOG1P)
check_symbol_exists(log1pf math.h HAVE_LOG1PF)
check_symbol_exists(log2 math.h HAVE_LOG2)
check_symbol_exists(log2f math.h HAVE_LOG2F)
check_symbol_exists(lrint math.h HAVE_LRINT)
check_symbol_exists(lrintf math.h HAVE_LRINTF)
check_symbol_exists(lround math.h HAVE_LROUND)
check_symbol_exists(lroundf math.h HAVE_LROUNDF)
check_symbol_exists(nearbyint math.h HAVE_NEARBYINT)
check_symbol_exists(nearbyintf math.h HAVE_NEARBYINTF)
check_symbol_exists(nexttoward math.h HAVE_NEXTTOWARD)
check_symbol_exists(nexttowardf math.h HAVE_NEXTTOWARDF)
check_symbol_exists(remainder math.h HAVE_REMAINDER)
check_symbol_exists(remainderf math.h HAVE_REMAINDERF)
check_symbol_exists(remquo math.h HAVE_REMQUO)
check_symbol_exists(remquof math.h HAVE_REMQUOF)
check_symbol_exists(rint math.h HAVE_RINT)
check_symbol_exists(rintf math.h HAVE_RINTF)
check_symbol_exists(round math.h HAVE_ROUND)
check_symbol_exists(roundf math.h HAVE_ROUNDF)
check_symbol_exists(tgamma math.h HAVE_TGAMMA)
check_symbol_exists(tgammaf math.h HAVE_TGAMMAF)
check_symbol_exists(trunc math.h HAVE_TRUNC)
check_symbol_exists(truncf math.h HAVE_TRUNCF)
check_symbol_exists(y0 math.h HAVE_Y0)
check_symbol_exists(y1 math.h HAVE_Y1)
check_symbol_exists(yn math.h HAVE_YN)
unset(CMAKE_REQUIRED_LIBRARIES)

configure_file(include/config.h.in include/config.h)

include_directories(${PROJECT_BINARY_DIR}/include include)

add_subdirectory(loader)